--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = pgwebsocket
 description = Async websocket to PostgreSQL proxy.
 long_description = file: README.rst
-keywords = hacktoberfest postgresql
+keywords = postgresql
 author = Barnaby Shearer
 author_email = b@zi.is
 repository = "https://github.com/BarnabyShearer/pgwebsocket"
