--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ packages = find:
 install_requires = 
     aiohttp
     psycopg2
+    types-psycopg2
 python_requires = >=3.7
 
 [options.package_data]
