--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,13 @@ long_description = file: README.rst
 keywords = postgresql
 author = Barnaby Shearer
 author_email = b@zi.is
-repository = "https://github.com/BarnabyShearer/pgwebsocket"
 classifiers =
     Development Status :: 5 - Production/Stable
     Programming Language :: Python :: 3
+project_urls =
+    Source = "https://github.com/BarnabyShearer/pgwebsocket"
+    Tracker = "https://github.com/BarnabyShearer/pgwebsocket/issues"
+    Documentation = "http://pgwebsocket.readthedocs.io/en/latest/"
 
 [options]
 packages = find:
