Upgrade to psycopg3

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,7 @@ project_urls =
 packages = find:
 install_requires = 
     aiohttp
-    psycopg2
-    types-psycopg2
+    psycopg
 python_requires = >=3.7
 
 [options.package_data]
