--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,9 @@ classifiers =
     Development Status :: 5 - Production/Stable
     Programming Language :: Python :: 3
 project_urls =
-    Source = "https://github.com/BarnabyShearer/pgwebsocket"
-    Tracker = "https://github.com/BarnabyShearer/pgwebsocket/issues"
-    Documentation = "http://pgwebsocket.readthedocs.io/en/latest/"
+    Source = https://github.com/BarnabyShearer/pgwebsocket
+    Tracker = https://github.com/BarnabyShearer/pgwebsocket/issues
+    Documentation = https://pgwebsocket.readthedocs.io/en/latest/
 
 [options]
 packages = find:
