--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = pgwebsocket
 description = Async websocket to PostgreSQL proxy.
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 keywords = postgresql
 author = Barnaby Shearer
 author_email = b@zi.is
